k8s/nginx/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  namespace: workshop
  annotations:
    kubernetes.io/ingress.class: nginx

    nginx.ingress.kubernetes.io/auth-url: "http://auth-function.workshop.svc.cluster.local/auth/validate"
    nginx.ingress.kubernetes.io/auth-response-headers: "X-User-Id,X-User-CPF"
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: web-service
                port:
                  number: 3000
