k8s/nginx/smoke.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-smoke-test
  namespace: workshop
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /up
            pathType: Prefix
            backend:
              service:
                name: web-service
                port:
                  number: 3000
